
2005/01/19: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added GWEN_NetTransportSSL_SetAskAddCertFn2() which allows setting a
  callback function which takes a user data pointer.
- fixed a bug which caused HTTP connections not to return the last message
  received
- now the HTTP protocol version plus the HTTP header "connection:" is
  inspected to find out whether a connection is to be auto-terminated after
  a message has been received


===========================================================================
MARK: released gwenhywfar-1.5.0 (2005/01/14)
===========================================================================


2005/01/14: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_Path_HandleWithIdx(), make GWEN_DB use this instead of
  the old function.
  This results in GWEN_DB_ being able to handle indices, like in
  "root/group[2]/var[1]"
- now version numbers always use three digits (except for CVS packages).
  @Christian: You won ;-)
- added function GWEN_StringList_FirstString()


2005/01/13: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- valgrind session, fixed memory leaks in:
  - GWEN_NetTransport_free()
  - GWEN_WaitCallback_free()
- added memtrace code to debug*.{c,h}
- improved function GWEN_NetConnectionHTTP_Work(): It now only calls the 
  WorkIO function if necessary, otherwise it doesn't: This might fix the
  problem with AqHBCI and banks which terminate the connection before all
  messages have been read. This way this function only returns an error if
  no there are no more messages in the queues.


2005/01/12: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a minor bug in typemaker tool (was not honouring "const" property
  for lists)


===========================================================================