@@ -17,11 +17,11 @@ AC_CONFIG_HEADER([config.h])
 # versions
 #
 GWENHYWFAR_VERSION_MAJOR=1
-GWENHYWFAR_VERSION_MINOR=5
+GWENHYWFAR_VERSION_MINOR=6
 GWENHYWFAR_VERSION_PATCHLEVEL=0
-GWENHYWFAR_VERSION_BUILD=1
+GWENHYWFAR_VERSION_BUILD=0
 dnl "stable", "rcX", "betaX", "cvs"
-GWENHYWFAR_VERSION_TAG="cvs"
+GWENHYWFAR_VERSION_TAG="stable"
 GWENHYWFAR_VERSION_FULL_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL.$GWENHYWFAR_VERSION_BUILD${GWENHYWFAR_VERSION_TAG}"
 GWENHYWFAR_VERSION_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL"
 
@@ -30,9 +30,9 @@ GWENHYWFAR_VERSION_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$
 #
 # SO version for Gwenhywfar
 #
-GWENHYWFAR_SO_CURRENT="22"
+GWENHYWFAR_SO_CURRENT="23"
 GWENHYWFAR_SO_REVISION="0"
-GWENHYWFAR_SO_AGE="5"
+GWENHYWFAR_SO_AGE="6"
 GWENHYWFAR_SO_EFFECTIVE="`echo \$(($GWENHYWFAR_SO_CURRENT-$GWENHYWFAR_SO_AGE))`"
 
 
