@@ -1356,25 +1356,173 @@ GWEN_NetTransportSSL_Work(GWEN_NETTRANSPORT *tr) {
     else {
       char *certbuf;
       long vr;
+      GWEN_DB_NODE *dbCert;
+      const char *s;
+      X509_NAME *nm;
+      unsigned long hash;
+      char numbuf[16];
+      int isNew;
+      int isError;
+      int isWarning;
+      GWEN_INETADDRESS *peerAddr;
+      GWEN_ERRORCODE err;
 
       certbuf=X509_NAME_oneline(X509_get_issuer_name(cert), 0, 0);
 
       DBG_INFO(GWEN_LOGDOMAIN, "Got a certificate: %s",
                certbuf);
+
+      /* setup certificate */
+      isNew=0;
+      isError=0;
+      isWarning=0;
+      skd->peerCertificate=GWEN_NetTransportSSL__Cert2Db(cert);
+      dbCert=skd->peerCertificate;
+
+      err=GWEN_Socket_GetPeerAddr(skd->socket, &peerAddr);
+      if (!GWEN_Error_IsOk(err)) {
+        DBG_ERROR_ERR(GWEN_LOGDOMAIN, err);
+      }
+      else {
+        char addrBuffer[256];
+
+        err=GWEN_InetAddr_GetAddress(peerAddr, addrBuffer,
+                                     sizeof(addrBuffer)-1);
+        if (!GWEN_Error_IsOk(err)) {
+          DBG_ERROR_ERR(GWEN_LOGDOMAIN, err);
+        }
+        else {
+          GWEN_DB_SetCharValue(dbCert, GWEN_DB_FLAGS_DEFAULT,
+                               "ipaddr", addrBuffer);
+        }
+        GWEN_InetAddr_free(peerAddr);
+      }
+
+      /* setup statusText and statusCode */
       vr=SSL_get_verify_result(skd->ssl);
+      switch(vr) {
+      case X509_V_ERR_UNABLE_TO_GET_ISSUER_CERT_LOCALLY:
+        s=I18N("New certificate");
+        isNew=1;
+        break;
+      case X509_V_ERR_UNABLE_TO_GET_ISSUER_CERT:
+        s=I18N("Unable to get issuer certificate");
+        isWarning=1;
+        break;
+      case X509_V_ERR_UNABLE_TO_DECRYPT_CERT_SIGNATURE:
+        s=I18N("Unable to decrypt cert signature");
+        isError=1;
+        break;
+      case X509_V_ERR_UNABLE_TO_DECODE_ISSUER_PUBLIC_KEY:
+        s=I18N("Unable to decode issuer public key");
+        isError=1;
+        break;
+      case X509_V_ERR_CERT_SIGNATURE_FAILURE:
+        s=I18N("Cert signature failure");
+        isError=1;
+        break;
+      case X509_V_ERR_CERT_NOT_YET_VALID:
+        s=I18N("Cert not yet valid");
+        isError=1;
+        break;
+      case X509_V_ERR_CERT_HAS_EXPIRED:
+        s=I18N("Cert has expired");
+        isError=1;
+        break;
+      case X509_V_ERR_DEPTH_ZERO_SELF_SIGNED_CERT:
+        s=I18N("Self-signed root cert");
+        isWarning=1;
+        break;
+      case X509_V_ERR_SELF_SIGNED_CERT_IN_CHAIN:
+        s=I18N("Self-signed cert");
+        isWarning=1;
+        break;
+      case X509_V_ERR_UNABLE_TO_VERIFY_LEAF_SIGNATURE:
+        s=I18N("Unable to verify leaf signature");
+        isError=1;
+        break;
+      case X509_V_ERR_CERT_CHAIN_TOO_LONG:
+        s=I18N("Cert chain too long");
+        isError=1;
+        break;
+      case X509_V_ERR_CERT_REVOKED:
+        s=I18N("Cert revoked");
+        isError=1;
+        break;
+      case X509_V_ERR_INVALID_CA:
+        s=I18N("Invalid CA");
+        isError=1;
+        break;
+      case X509_V_ERR_CERT_UNTRUSTED:
+        s=I18N("Cert untrusted");
+        isError=1;
+        break;
+      case X509_V_ERR_CERT_REJECTED:
+        s=I18N("Cert rejected");
+        isError=1;
+        break;
+
+      case X509_V_ERR_ERROR_IN_CERT_NOT_BEFORE_FIELD:
+      case X509_V_ERR_ERROR_IN_CERT_NOT_AFTER_FIELD:
+      case X509_V_ERR_ERROR_IN_CRL_LAST_UPDATE_FIELD:
+      case X509_V_ERR_ERROR_IN_CRL_NEXT_UPDATE_FIELD:
+      case X509_V_ERR_PATH_LENGTH_EXCEEDED:
+      case X509_V_ERR_INVALID_PURPOSE:
+        s=I18N("Formal error in certificate");
+        isError=1;
+        break;
+
+      case X509_V_ERR_OUT_OF_MEM:
+        s=I18N("Out of memory");
+        isError=1;
+        break;
+      case X509_V_ERR_UNABLE_TO_GET_CRL:
+        s=I18N("Unable to get CRL");
+        isError=1;
+        break;
+      case X509_V_ERR_UNABLE_TO_DECRYPT_CRL_SIGNATURE:
+        s=I18N("Unable to decrypt CRL signature");
+        isError=1;
+        break;
+      case X509_V_ERR_CRL_SIGNATURE_FAILURE:
+        s=I18N("CRL signature failure");
+        isError=1;
+        break;
+      case X509_V_ERR_CRL_NOT_YET_VALID:
+        s=I18N("CRL not yet valid");
+        isError=1;
+        break;
+      case X509_V_ERR_CRL_HAS_EXPIRED:
+        s=I18N("CRL has expired");
+        isError=1;
+        break;
+      case X509_V_OK:
+        s=I18N("Certificate ok");
+        break;
+      default:
+        s=I18N("Unknown SSL error");
+        isError=1;
+      }
+      GWEN_DB_SetCharValue(dbCert, GWEN_DB_FLAGS_DEFAULT,
+                           "statusText", s);
+      nm=X509_get_subject_name(cert);
+      if (nm) {
+        hash=X509_NAME_hash(nm);
+        snprintf(numbuf, sizeof(numbuf), "%08lx", hash);
+        GWEN_DB_SetCharValue(dbCert, GWEN_DB_FLAGS_DEFAULT,
+                             "hashValue", numbuf);
+      }
+      GWEN_DB_SetIntValue(dbCert, GWEN_DB_FLAGS_DEFAULT,
+                          "isNew", isNew);
+      GWEN_DB_SetIntValue(dbCert, GWEN_DB_FLAGS_DEFAULT,
+                          "isError", isError);
+      GWEN_DB_SetIntValue(dbCert, GWEN_DB_FLAGS_DEFAULT,
+                          "isWarning", isWarning);
+
       if (vr!=X509_V_OK) {
         GWEN_NETTRANSPORTSSL_ASKADDCERT_RESULT res;
 	int isErr;
-        GWEN_DB_NODE *dbCert;
-        const char *s;
-	X509_NAME *nm;
-	unsigned long hash;
-	char numbuf[16];
-	int isNew;
-        GWEN_INETADDRESS *peerAddr;
-	GWEN_ERRORCODE err;
 
-        isNew=0;
 	if (skd->secure) {
           DBG_ERROR(GWEN_LOGDOMAIN,
                     "Invalid peer certificate in secure mode, aborting");
@@ -1392,119 +1540,6 @@ GWEN_NetTransportSSL_Work(GWEN_NETTRANSPORT *tr) {
           DBG_WARN(GWEN_LOGDOMAIN,
                    "Invalid peer certificate, will ask user");
         }
-
-        /* setup certificate */
-        dbCert=GWEN_NetTransportSSL__Cert2Db(cert);
-
-	err=GWEN_Socket_GetPeerAddr(skd->socket, &peerAddr);
-	if (!GWEN_Error_IsOk(err)) {
-	  DBG_ERROR_ERR(GWEN_LOGDOMAIN, err);
-	}
-	else {
-	  char addrBuffer[256];
-
-	  err=GWEN_InetAddr_GetAddress(peerAddr, addrBuffer,
-				       sizeof(addrBuffer)-1);
-	  if (!GWEN_Error_IsOk(err)) {
-	    DBG_ERROR_ERR(GWEN_LOGDOMAIN, err);
-	  }
-	  else {
-	    GWEN_DB_SetCharValue(dbCert, GWEN_DB_FLAGS_DEFAULT,
-				 "ipaddr", addrBuffer);
-	  }
-          GWEN_InetAddr_free(peerAddr);
-	}
-
-        /* setup statusText and statusCode */
-        switch(vr) {
-        case X509_V_ERR_UNABLE_TO_GET_ISSUER_CERT_LOCALLY:
-	  s=I18N("New certificate");
-	  isNew=1;
-          break;
-        case X509_V_ERR_UNABLE_TO_GET_ISSUER_CERT:
-          s=I18N("Unable to get issuer certificate");
-          break;
-        case X509_V_ERR_UNABLE_TO_DECRYPT_CERT_SIGNATURE:
-          s=I18N("Unable to decrypt cert signature");
-          break;
-        case X509_V_ERR_UNABLE_TO_DECODE_ISSUER_PUBLIC_KEY:
-          s=I18N("Unable to decode issuer public key");
-          break;
-        case X509_V_ERR_CERT_SIGNATURE_FAILURE:
-          s=I18N("Cert signature failure");
-          break;
-        case X509_V_ERR_CERT_NOT_YET_VALID:
-          s=I18N("Cert not yet valid");
-          break;
-        case X509_V_ERR_CERT_HAS_EXPIRED:
-          s=I18N("Cert has expired");
-          break;
-        case X509_V_ERR_DEPTH_ZERO_SELF_SIGNED_CERT:
-          s=I18N("Self-signed root cert");
-          break;
-        case X509_V_ERR_SELF_SIGNED_CERT_IN_CHAIN:
-          s=I18N("Self-signed cert");
-          break;
-        case X509_V_ERR_UNABLE_TO_VERIFY_LEAF_SIGNATURE:
-          s=I18N("Unable to verify leaf signature");
-          break;
-        case X509_V_ERR_CERT_CHAIN_TOO_LONG:
-          s=I18N("Cert chain too long");
-          break;
-        case X509_V_ERR_CERT_REVOKED:
-          s=I18N("Cert revoked");
-          break;
-        case X509_V_ERR_INVALID_CA:
-          s=I18N("Invalid CA");
-          break;
-        case X509_V_ERR_CERT_UNTRUSTED:
-          s=I18N("Cert untrusted");
-          break;
-        case X509_V_ERR_CERT_REJECTED:
-          s=I18N("Cert rejected");
-          break;
-
-        case X509_V_ERR_ERROR_IN_CERT_NOT_BEFORE_FIELD:
-        case X509_V_ERR_ERROR_IN_CERT_NOT_AFTER_FIELD:
-        case X509_V_ERR_ERROR_IN_CRL_LAST_UPDATE_FIELD:
-        case X509_V_ERR_ERROR_IN_CRL_NEXT_UPDATE_FIELD:
-        case X509_V_ERR_PATH_LENGTH_EXCEEDED:
-        case X509_V_ERR_INVALID_PURPOSE:
-          s=I18N("Formal error in certificate");
-          break;
-
-        case X509_V_ERR_OUT_OF_MEM:
-          s=I18N("Out of memory");
-          break;
-        case X509_V_ERR_UNABLE_TO_GET_CRL:
-          s=I18N("Unable to get CRL");
-          break;
-        case X509_V_ERR_UNABLE_TO_DECRYPT_CRL_SIGNATURE:
-          s=I18N("Unable to decrypt CRL signature");
-          break;
-        case X509_V_ERR_CRL_SIGNATURE_FAILURE:
-          s=I18N("CRL signature failure");
-          break;
-        case X509_V_ERR_CRL_NOT_YET_VALID:
-          s=I18N("CRL not yet valid");
-          break;
-        case X509_V_ERR_CRL_HAS_EXPIRED:
-          s=I18N("CRL has expired");
-        default:
-          s=I18N("Unknown SSL error");
-
-        }
-        GWEN_DB_SetCharValue(dbCert, GWEN_DB_FLAGS_DEFAULT,
-                             "statusText", s);
-	nm=X509_get_subject_name(cert);
-	if (nm) {
-	  hash=X509_NAME_hash(nm);
-	  snprintf(numbuf, sizeof(numbuf), "%08lx", hash);
-	  GWEN_DB_SetCharValue(dbCert, GWEN_DB_FLAGS_DEFAULT,
-			       "hashValue", numbuf);
-	}
-	GWEN_DB_SetIntValue(dbCert, GWEN_DB_FLAGS_DEFAULT,
-			    "isNew", isNew);
 
         /* ask user */
         isErr=0;
@@ -1557,13 +1592,11 @@ GWEN_NetTransportSSL_Work(GWEN_NETTRANSPORT *tr) {
           skd->ssl=0;
           SSL_CTX_free(skd->ssl_ctx);
           skd->ssl_ctx=0;
-          GWEN_DB_Group_free(dbCert);
           free(certbuf);
           X509_free(cert);
           GWEN_NetTransport_SetStatus(tr, GWEN_NetTransportStatusDisabled);
           return GWEN_NetTransportWorkResult_Error;
         }
-        GWEN_DB_Group_free(dbCert);
       }
       else {
         /* store peer certificate */
